--- a/config/db.properties
+++ b/config/db.properties
@@ -1,3 +1,3 @@
 ## ACA VA LA CONTRASE\u00d1A DEL ADMIN DE BASE DE DATOS. ESTE ARCHIVO EL LE\u00c3\u008dDO POR LA CLASE Util
 ## QUE LO USA PARA ACCEDER A LA DB.
-jakarta.persistence.jdbc.password=marcos927
+jakarta.persistence.jdbc.password=
