--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <artifactId>jfreechart</artifactId>
             <version>1.5.6</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
